--- a/README
+++ b/README
@@ -17,3 +17,88 @@ See Documentation/00-INDEX for a list of what is contained in each file.
 Please read the Documentation/process/changes.rst file, as it contains the
 requirements for building and running the kernel, and information about
 the problems which may result by upgrading your kernel.
+
+
+## Build
+https://github.com/MotorolaMobilityLLC/kernel-msm/issues/367
+
+https://unix.stackexchange.com/questions/735778/how-fix-no-rule-to-make-target-arch-arm64-boot-dts-kona-rumi-dtb-needed-by
+
+### Toolchain
+- Android S(12)	AOSP clang version: r416183b, [ref](https://android.googlesource.com/platform//prebuilts/clang/host/linux-x86/)
+
+```bash
+apt-get update
+apt-get build-dep linux
+apt-get install -y bc bison build-essential ccache curl flex g++-multilib gcc-multilib git git-lfs gnupg gperf imagemagick lib32ncurses5-dev lib32readline-dev lib32z1-dev libelf-dev liblz4-tool libncurses5 libncurses5-dev libsdl1.2-dev libssl-dev libxml2 libxml2-utils lzop pngcrush rsync schedtool squashfs-tools xsltproc zip zlib1g-dev p7zip-full p7zip-rar libwxgtk3.0-gtk3-dev dwarves cmake libdwarf-dev libdw-dev pkgconf linux-tools-generic linux-tools-common bpfcc-tools libbpfcc libbpfcc-dev linux-generic libbpf-dev 
+
+# wget https://android.googlesource.com/platform//prebuilts/clang/host/linux-x86/+archive/1c1069109f294e9ffbdc1ff8541394ab4b5d941d/clang-r416183b1.tar.gz
+# wget https://android.googlesource.com/platform/prebuilts/gcc/linux-x86/aarch64/aarch64-linux-android-4.9/+archive/refs/tags/android-12.1.0_r27.tar.gz -O gcc-aarch64.tar.gz
+# wget https://android.googlesource.com/platform/prebuilts/gcc/linux-x86/arm/arm-linux-androideabi-4.9/+archive/refs/tags/android-12.1.0_r27.tar.gz -O gcc-arm.tar.gz
+git clone  --depth 1 https://github.com/LineageOS/android_prebuilts_clang_kernel_linux-x86_clang-r416183b /opt/clang-r416183b
+
+git clone https://android.googlesource.com/platform/prebuilts/gcc/linux-x86/aarch64/aarch64-linux-android-4.9 -b android-12.1.0_r27 --depth=1 --single-branch --no-tags /opt/aarch64-linux-android-4.9
+
+git clone https://android.googlesource.com/platform/prebuilts/gcc/linux-x86/arm/arm-linux-androideabi-4.9 -b android-12.1.0_r27 --depth=1 --single-branch --no-tags /opt/arm-linux-androideabi-4.9
+
+
+``` 
+
+
+
+
+### build.sh
+
+```bash
+#!/bin/bash
+
+CLANG=/opt/clang-r416183b/bin
+GCC32=/opt/arm-linux-androideabi-4.9/bin
+GCC64=/opt/aarch64-linux-android-4.9/bin
+
+
+export CLANG_TRIPLE=aarch64-linux-gnu
+export CROSS_COMPILE=aarch64-linux-android-
+export CROSS_COMPILE_ARM32=arm-linux-androideabi-
+export LD_LIBRARY_PATH=/opt/clang-r416183b/lib64:/usr/local/lib:$LD_LIBRARY_PATH
+PATH=$CLANG:$GCC64:$GCC32:$PATH
+export PATH
+
+# Vars
+export ARCH=arm64
+export SUBARCH=$ARCH
+export KBUILD_BUILD_USER=hudsoncm
+export KBUILD_BUILD_HOST=ilclbld169
+
+
+DATE_START=$(date +"%s")
+
+echo  "DEFCONFIG SET TO $DEFCONFIG"
+echo "-------------------"
+echo "Making Kernel:"
+echo "-------------------"
+echo
+
+make -j$(nproc --all) CC=clang O=out ARCH=arm64 O=out vendor/kona-perf_defconfig vendor/ext_config/moto-kona.config vendor/ext_config/nio-default.config
+
+make -j$(nproc --all) CC=clang O=out ARCH=arm64
+
+# make CC="ccache clang" CXX="ccache clang++" LLVM=1 LLVM_IAS=1 O=out $DEFCONFIG
+# make CC='ccache clang' CXX="ccache clang++" LLVM=1 LLVM_IAS=1 O=out $THREAD \
+#     LOCALVERSION=-Android12-9-00001-g41ff3fa8fff9-ab8171928 \
+#     CONFIG_LOCALVERSION_AUTO=n \
+#     CONFIG_MEDIATEK_CPUFREQ_DEBUG=m CONFIG_MTK_IPI=m CONFIG_MTK_TINYSYS_MCUPM_SUPPORT=m \
+#     CONFIG_MTK_MBOX=m CONFIG_RPMSG_MTK=m CONFIG_LTO_CLANG=y CONFIG_LTO_NONE=n \
+#     CONFIG_LTO_CLANG_THIN=y CONFIG_LTO_CLANG_FULL=n 2>&1 | tee kernel.log
+
+echo
+echo "-------------------"
+echo "Build Completed in:"
+echo "-------------------"
+echo
+
+DATE_END=$(date +"%s")
+DIFF=$(($DATE_END - $DATE_START))
+echo "Time: $(($DIFF / 60)) minute(s) and $(($DIFF % 60)) seconds."
+echo
+```
